--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: php
 php:
     - 7.2
 
+before_install:
+    - phpenv config-rm xdebug.ini
 before_script:
+    - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
-    - sudo redis-server /etc/redis/redis.conf --port 6379
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
